--- a/pns_data_satatistik.html
+++ b/pns_data_satatistik.html
@@ -216,9 +216,9 @@
 
 							<!--begin::Row-->
 							<div class="row g-5 mb-4">
-								<div class="col-xl-3">
+								<div class="col-lg-6 col-xxl-3">
 									<!--begin::List Widget 6-->
-									<div class="card h-100">
+									<div class="card h-100" style="background-color: #CBF0F4">
 										<!--begin::Header-->
 										<div class="card-header border-0">
 											<h3 class="card-title fw-bolder text-dark">Kondisi Perangkat Daerah</h3>
@@ -283,13 +283,13 @@
 								</div>
 								<div class="col-lg-6 col-xxl-3">
 									<!--begin::Card-->
-									<div class="card h-100">
+									<div class="card h-100" style="background-color: #CBD4F4">
 										<!--begin::Card body-->
 										<a href="#">
 											<div class="card-body p-9">
 												<!--begin::Heading-->
-												<div class="fs-2hx fw-bolder">8.375</div>
-												<div class="fs-4 fw-bold text-gray-400 mb-7">Total Seluruh ASN</div>
+												<div class="fs-2hx text-gray-800 fw-bolder">8.375</div>
+												<div class="fs-4 fw-bold text-gray-700 mb-7">Total Seluruh ASN</div>
 												<!--end::Heading-->
 												<!--begin::Wrapper-->
 												<div class="d-flex flex-wrap">
@@ -298,15 +298,15 @@
 														<!--begin::Label-->
 														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
 															<div class="bullet bg-primary me-3"></div>
-															<div class="text-gray-400">PNS</div>
-															<div class="ms-auto fw-bolder text-gray-700">4.950</div>
+															<div class="text-gray-700">PNS</div>
+															<div class="ms-auto fw-bolder text-gray-800">4.950</div>
 														</div>
 														<!--end::Label-->
 														<!--begin::Label-->
 														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
 															<div class="bullet bg-success me-3"></div>
-															<div class="text-gray-400">PPPK</div>
-															<div class="ms-auto fw-bolder text-gray-700">3.345</div>
+															<div class="text-gray-700">PPPK</div>
+															<div class="ms-auto fw-bolder text-gray-800">3.345</div>
 														</div>
 														<!--end::Label-->
 													</div>
@@ -327,13 +327,13 @@
 								</div>
 								<div class="col-lg-6 col-xxl-3">
 									<!--begin::Card-->
-									<div class="card h-100">
+									<div class="card h-100" style="background-color: #F7D9E3">
 										<!--begin::Card body-->
 										<a href="#">
 											<div class="card-body">
 												<!--begin::Heading-->
-												<div class="fs-2hx fw-bolder">8.375</div>
-												<div class="fs-4 fw-bold text-gray-400 mb-7">Total Seluruh ASN Berdasarkan Perangkat Daerah </div>
+												<div class="fs-2hx fw-bolder text-gray-800">8.375</div>
+												<div class="fs-6 fw-bold text-gray-700 mb-7">Total Seluruh ASN Berdasarkan Perangkat Daerah </div>
 												<!--end::Heading-->
 												<!--begin::Wrapper-->
 												<div class="d-flex flex-wrap">
@@ -352,14 +352,14 @@
 								</div>
 								<div class="col-lg-6 col-xxl-3">
 									<!--begin::Budget-->
-									<div class="card h-100">
+									<div class="card h-100" style="background-color: #f6f7d9">
 										<a href="#">
 											<div class="card-body p-9">
-												<div class="fs-2hx fw-bolder text-primary">4.950</div>
-												<div class="fs-4 fw-bold text-gray-400 mb-7">ASN Berdasarkan Jenis Kelamin</div>
+												<div class="fs-2hx fw-bolder text-gray-800">4.950</div>
+												<div class="fs-6 fw-bold text-gray-700 mb-7">ASN Berdasarkan Jenis Kelamin</div>
 
-												<div class="fs-6 d-flex justify-content-between mb-4 text-gray-900">
-													<div class="fw-bold text-gray-400">PNS Laki-Laki</div>
+												<div class="fs-6 d-flex justify-content-between mb-4 text-gray-800">
+													<div class="fw-bold text-gray-700">PNS Laki-Laki</div>
 													<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
 													<span class="svg-icon svg-icon-3 me-3 svg-icon-success">
@@ -372,8 +372,8 @@
 												</div>
 												<div class="separator separator-dashed"></div>
 
-												<div class="fs-6 d-flex text-gray-900 justify-content-between my-4">
-													<div class="fw-bold text-gray-400">PNS Perempuan</div>
+												<div class="fs-6 d-flex text-gray-800 justify-content-between my-4">
+													<div class="fw-bold text-gray-700">PNS Perempuan</div>
 													<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr006.svg-->
 													<span class="svg-icon svg-icon-3 me-3 svg-icon-danger">
@@ -388,8 +388,8 @@
 
 												<div class="separator separator-dashed"></div>
 
-												<div class="fs-6 d-flex justify-content-between my-4 text-gray-900">
-													<div class="fw-bold text-gray-400">PPPK Laki-Laki</div>
+												<div class="fs-6 d-flex justify-content-between my-4 text-gray-800">
+													<div class="fw-bold text-gray-700">PPPK Laki-Laki</div>
 													<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
 													<span class="svg-icon svg-icon-3 me-3 svg-icon-success">
@@ -403,8 +403,8 @@
 
 												<div class="separator separator-dashed"></div>
 												
-												<div class="fs-6 d-flex text-gray-900 justify-content-between my-4">
-													<div class="fw-bold text-gray-400">PPPK Perempuan</div>
+												<div class="fs-6 d-flex text-gray-800 justify-content-between my-4">
+													<div class="fw-bold text-gray-700">PPPK Perempuan</div>
 													<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr006.svg-->
 													<span class="svg-icon svg-icon-3 me-3 svg-icon-danger">
@@ -424,7 +424,6 @@
 							</div>
 
 							<div class="row g-5 mb-4">
-
 								<div class="col-xl-12">
 									<!--begin::Card-->
 									<div class="card card-xl-stretch mb-5 mb-xl-8">
@@ -507,6 +506,183 @@
 							</div>
 
 							<div class="row g-5 mb-4">
+								<div class="col-lg-4">
+									<!--begin::Card-->
+									<div class="card h-100">
+										<!--begin::Card body-->
+										<a href="#">
+											<div class="row p-9">
+												<!--begin::Heading-->
+												<div class="fs-2hx fw-bolder">87</div>
+												<div class="fs-4 fw-bold text-gray-800 mb-7">Perangkat Daerah</div>
+												<!--end::Heading-->
+												<!--begin::Wrapper-->
+												<div class="d-flex flex-wrap">
+													<!--begin::Chart-->
+													<!-- <div class="d-flex flex-center h-100px w-100px me-9 mb-7">
+														<canvas id="kt_project_list_chart2"></canvas>
+													</div> -->
+													<!--end::Chart-->
+													<!--begin::Labels-->
+													<div class="d-flex flex-column justify-content-center flex-row-fluid pe-11">
+														<!--begin::Label-->
+														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
+															<div class="bullet bg-primary me-3"></div>
+															<div class="text-gray-700">PD Terindikasi</div>
+															<div class="ms-auto fw-bolder text-gray-700">47</div>
+														</div>
+														<!--end::Label-->
+														<!--begin::Label-->
+														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
+															<div class="bullet bg-warning me-3"></div>
+															<div class="text-gray-700">PD Terindikasi</div>
+															<div class="ms-auto fw-bolder text-gray-700">54,02%</div>
+														</div>
+														<!--end::Label-->
+													</div>
+													<!--end::Labels-->
+												</div>
+												<!--end::Wrapper-->
+											</div>
+											<div class="row p-9">
+												<!--begin::Heading-->
+												<div class="fs-2hx fw-bolder">2.228</div>
+												<div class="fs-4 fw-bold text-gray-800 mb-7">ASN</div>
+												<!--end::Heading-->
+												<!--begin::Wrapper-->
+												<div class="d-flex flex-wrap">
+													<!--begin::Chart-->
+													<!-- <div class="d-flex flex-center h-100px w-100px me-9 mb-7">
+														<canvas id="kt_project_list_chart2"></canvas>
+													</div> -->
+													<!--end::Chart-->
+													<!--begin::Labels-->
+													<div class="d-flex flex-column justify-content-center flex-row-fluid pe-11">
+														<!--begin::Label-->
+														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
+															<div class="bullet bg-primary me-3"></div>
+															<div class="text-gray-700">ASN Terindikasi</div>
+															<div class="ms-auto fw-bolder text-gray-700">136</div>
+														</div>
+														<!--end::Label-->
+														<!--begin::Label-->
+														<div class="d-flex fs-6 fw-bold align-items-center mb-3">
+															<div class="bullet bg-warning me-3"></div>
+															<div class="text-gray-700">ASN Tidak Terindikasi</div>
+															<div class="ms-auto fw-bolder text-gray-700">2.029</div>
+														</div>
+														<!--end::Label-->
+													</div>
+													<!--end::Labels-->
+												</div>
+												<!--end::Wrapper-->
+											</div>
+										</a>
+										<!--end::Card body-->
+									</div>
+									<!--end::Card-->
+								</div>
+								<div class="col-lg-8">
+									<!--begin::Card-->
+									<div class="card h-100">
+										<!--begin::Header-->
+										<div class="card-header border-0 pt-5">
+											<h3 class="card-title align-items-start flex-column">
+												<span class="card-label fw-bolder text-dark">Indikasi Kecurangan E-Absensi</span>
+												<span class="text-gray-600 mt-1 fw-bold fs-7">Penggunaan Aplikasi Semesta</span>
+											</h3>
+											<div class="card-toolbar">
+												<!--begin::Menu-->
+												<button type="button" class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+													<!--begin::Svg Icon | path: icons/duotune/general/gen024.svg-->
+													<span class="svg-icon svg-icon-2">
+														<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
+															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+																<rect x="5" y="5" width="5" height="5" rx="1" fill="#000000" />
+																<rect x="14" y="5" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
+																<rect x="5" y="14" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
+																<rect x="14" y="14" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
+															</g>
+														</svg>
+													</span>
+													<!--end::Svg Icon-->
+												</button>
+												<!--begin::Menu 1-->
+												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb2901">
+												<!--begin::Form-->
+												<div class="px-7 py-5">
+													<!--begin::Input group-->
+													<div class="mb-10">
+														<!--begin::Label-->
+														<label class="form-label fw-bold">Bulan :</label>
+														<!--end::Label-->
+														<!--begin::Input-->
+														<div>
+															<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Bulan" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
+																<option></option>
+																<option value="1">Januari</option>
+																<option value="2">Februari</option>
+																<option value="2">April</option>
+																<option value="2">Mei</option>
+																<option value="2">...</option>
+															</select>
+														</div>
+														<!--end::Input-->
+													</div>
+													<!--end::Input group-->
+													<!--begin::Input group-->
+													<div class="mb-10">
+														<!--begin::Label-->
+														<label class="form-label fw-bold">Tahun :</label>
+														<!--end::Label-->
+														<!--begin::Input-->
+														<div>
+															<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
+																<option></option>
+																<option value="1">2024</option>
+																<option value="2">2023</option>
+																<option value="2">2022</option>
+																<option value="2">2021</option>
+															</select>
+														</div>
+														<!--end::Input-->
+													</div>
+													<!--end::Input group-->
+													<!--begin::Actions-->
+													<div class="d-flex justify-content-end">
+														<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-2" data-kt-menu-dismiss="true">Reset</button>
+														<button type="submit" class="btn btn-sm btn-primary" data-kt-menu-dismiss="true">Terapkan</button>
+													</div>
+													<!--end::Actions-->
+												</div>
+												<!--end::Form-->
+												</div>
+												<!--end::Menu 1-->
+											</div>
+										</div>
+										<!--end::Header-->
+										<!--begin::Card body-->
+										<a href="#">
+											<div class="card-body">
+												<!--begin::Wrapper-->
+												<div class="d-flex flex-wrap pt-0">
+													<!--begin::Chart-->
+													<div class="col-xl-12 tausand">
+														<div id="kt_charts_widget_10_chart"></div>
+													</div>
+													<!--end::Chart-->
+												</div>
+												<!--end::Wrapper-->
+											</div>
+										</a>
+										<!--end::Card body-->
+									</div>
+									<!--end::Card-->
+								</div>
+
+							</div>
+
+							<div class="row g-5 mb-4">
 								<div class="col-lg-8">
 									<!--begin::Card-->
 									<div class="card card-xl-stretch mb-5 mb-xl-8">
@@ -533,7 +709,7 @@
 													<!--end::Svg Icon-->
 												</button>
 												<!--begin::Menu 1-->
-												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb27">
+												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb271">
 													<!--begin::Form-->
 													<div class="px-7 py-5">
 														<!--begin::Input group-->
@@ -543,7 +719,7 @@
 															<!--end::Label-->
 															<!--begin::Input-->
 															<div>
-																<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb27" data-allow-clear="true">
+																<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb271" data-allow-clear="true">
 																	<option></option>
 																	<option value="1">2026</option>
 																	<option value="2">2025</option>
@@ -659,29 +835,45 @@
 													<!--end::Svg Icon-->
 												</button>
 												<!--begin::Menu 1-->
-												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb28">
+												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485121b8c3790">
+													<!--begin::Header-->
+													<div class="px-7 py-5">
+														<div class="fs-5 text-dark fw-bolder">Filter Berdasarkan</div>
+													</div>
+													<!--end::Header-->
+													<!--begin::Menu separator-->
+													<div class="separator border-gray-200"></div>
+													<!--end::Menu separator-->
 													<!--begin::Form-->
 													<div class="px-7 py-5">
 														<!--begin::Input group-->
-														<div class="mb-2">
+														<div class="mb-10">
 															<!--begin::Label-->
-															<label class="form-label fw-bold">Pilih Tahun:</label>
+															<label class="form-label fw-bold">Bulan :</label>
 															<!--end::Label-->
 															<!--begin::Input-->
 															<div>
-																<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb28" data-allow-clear="true">
+																<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Bulan" data-dropdown-parent="#kt_menu_61485121b8c3790" data-allow-clear="true">
 																	<option></option>
-																	<option value="1">2026</option>
-																	<option value="2">2025</option>
-																	<option value="2">2024</option>
-																	<option value="2">2023</option>
-																	<option value="2">2022</option>
-																	<option value="2">2021</option>
+																	<option value="1">Januari</option>
+																	<option value="2">Februari</option>
+																	<option value="2">April</option>
+																	<option value="2">Mei</option>
+																	<option value="2">...</option>
 																</select>
 															</div>
 															<!--end::Input-->
 														</div>
 														<!--end::Input group-->
+														<!--begin::Input group-->
+
+														<!--end::Input group-->
+														<!--begin::Actions-->
+														<div class="d-flex justify-content-end">
+															<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-2" data-kt-menu-dismiss="true">Reset</button>
+															<button type="submit" class="btn btn-sm btn-primary" data-kt-menu-dismiss="true">Terapkan</button>
+														</div>
+														<!--end::Actions-->
 													</div>
 													<!--end::Form-->
 												</div>
@@ -695,7 +887,7 @@
 											</div>
 										</div>
 										<div class="row">
-																					<!--begin::Header-->
+										<!--begin::Header-->
 										<div class="card-header border-0 pt-5">
 											<h3 class="card-title align-items-start flex-column">
 												<span class="card-label fw-bolder text-dark">Kondisi Tata Naskah Berdasarkan Jenis Surat Semesta</span>
