--- a/pns_gps_keseluruhan.html
+++ b/pns_gps_keseluruhan.html
@@ -252,7 +252,66 @@
 											<input type="text" id="kt_filter_search" class="form-control form-control-white form-control-sm w-150px ps-9" placeholder="Search" />
 										</div>
 										<!--end::Search-->
-										<a href="#" class='btn btn-primary btn-sm' data-bs-toggle="tooltip" title="Filter Menu">Filter Menu</a>
+										<!-- <a href="#" class='btn btn-primary btn-sm' data-bs-toggle="tooltip" title="Filter Menu">Filter Menu</a> -->
+										<div class="card-toolbar">
+											<!--begin::Menu-->
+											<button type="button" class="btn btn-primary btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+												<!--begin::Svg Icon | path: icons/duotune/general/gen024.svg-->
+												Tampilkan Berdasarkan
+												<!--end::Svg Icon-->
+											</button>
+											<!--begin::Menu 1-->
+											<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb2901">
+											<!--begin::Form-->
+											<div class="px-7 py-5">
+												<!--begin::Input group-->
+												<div class="mb-10">
+													<!--begin::Label-->
+													<label class="form-label fw-bold">Bulan :</label>
+													<!--end::Label-->
+													<!--begin::Input-->
+													<div>
+														<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Bulan" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
+															<option></option>
+															<option value="1">Januari</option>
+															<option value="2">Februari</option>
+															<option value="2">April</option>
+															<option value="2">Mei</option>
+															<option value="2">...</option>
+														</select>
+													</div>
+													<!--end::Input-->
+												</div>
+												<!--end::Input group-->
+												<!--begin::Input group-->
+												<div class="mb-10">
+													<!--begin::Label-->
+													<label class="form-label fw-bold">Tahun :</label>
+													<!--end::Label-->
+													<!--begin::Input-->
+													<div>
+														<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
+															<option></option>
+															<option value="1">2024</option>
+															<option value="2">2023</option>
+															<option value="2">2022</option>
+															<option value="2">2021</option>
+														</select>
+													</div>
+													<!--end::Input-->
+												</div>
+												<!--end::Input group-->
+												<!--begin::Actions-->
+												<div class="d-flex justify-content-end">
+													<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-2" data-kt-menu-dismiss="true">Reset</button>
+													<button type="submit" class="btn btn-sm btn-primary" data-kt-menu-dismiss="true">Terapkan</button>
+												</div>
+												<!--end::Actions-->
+											</div>
+											<!--end::Form-->
+											</div>
+											<!--end::Menu 1-->
+										</div>
 									</div>
 									<!--end::Controls-->
 								</div>
@@ -398,74 +457,6 @@
 												<span class="card-label fw-bolder text-dark">Indikasi Kecurangan E-Absensi</span>
 												<span class="text-gray-600 mt-1 fw-bold fs-7">Penggunaan Aplikasi Semesta</span>
 											</h3>
-											<div class="card-toolbar">
-												<!--begin::Menu-->
-												<button type="button" class="btn btn-sm btn-icon btn-color-primary btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
-													<!--begin::Svg Icon | path: icons/duotune/general/gen024.svg-->
-													<span class="svg-icon svg-icon-2">
-														<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24">
-															<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-																<rect x="5" y="5" width="5" height="5" rx="1" fill="#000000" />
-																<rect x="14" y="5" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
-																<rect x="5" y="14" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
-																<rect x="14" y="14" width="5" height="5" rx="1" fill="#000000" opacity="0.3" />
-															</g>
-														</svg>
-													</span>
-													<!--end::Svg Icon-->
-												</button>
-												<!--begin::Menu 1-->
-												<div class="menu menu-sub menu-sub-dropdown w-250px w-md-300px" data-kt-menu="true" id="kt_menu_61485161beb2901">
-												<!--begin::Form-->
-												<div class="px-7 py-5">
-													<!--begin::Input group-->
-													<div class="mb-10">
-														<!--begin::Label-->
-														<label class="form-label fw-bold">Bulan :</label>
-														<!--end::Label-->
-														<!--begin::Input-->
-														<div>
-															<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Bulan" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
-																<option></option>
-																<option value="1">Januari</option>
-																<option value="2">Februari</option>
-																<option value="2">April</option>
-																<option value="2">Mei</option>
-																<option value="2">...</option>
-															</select>
-														</div>
-														<!--end::Input-->
-													</div>
-													<!--end::Input group-->
-													<!--begin::Input group-->
-													<div class="mb-10">
-														<!--begin::Label-->
-														<label class="form-label fw-bold">Tahun :</label>
-														<!--end::Label-->
-														<!--begin::Input-->
-														<div>
-															<select class="form-select form-select-solid" data-kt-select2="true" data-placeholder="Pilih Tahun" data-dropdown-parent="#kt_menu_61485161beb2901" data-allow-clear="true">
-																<option></option>
-																<option value="1">2024</option>
-																<option value="2">2023</option>
-																<option value="2">2022</option>
-																<option value="2">2021</option>
-															</select>
-														</div>
-														<!--end::Input-->
-													</div>
-													<!--end::Input group-->
-													<!--begin::Actions-->
-													<div class="d-flex justify-content-end">
-														<button type="reset" class="btn btn-sm btn-light btn-active-light-primary me-2" data-kt-menu-dismiss="true">Reset</button>
-														<button type="submit" class="btn btn-sm btn-primary" data-kt-menu-dismiss="true">Terapkan</button>
-													</div>
-													<!--end::Actions-->
-												</div>
-												<!--end::Form-->
-												</div>
-												<!--end::Menu 1-->
-											</div>
 										</div>
 										<!--end::Header-->
 										<!--begin::Card body-->
@@ -489,7 +480,7 @@
 								<div class="col-lg-2">
 									<div class="row gap-3">
 										<div class="col-lg-12">
-											<div class="card bg-primary  p-5">
+											<div class="card p-5" style="background-color: #BBE9FF;">
 												<div class="item">
 													<h3>Perangkat Daerah</h3>
 													<span>87</span>
@@ -497,7 +488,7 @@
 											</div>
 										</div>
 										<div class="col-lg-12">
-											<div class="card  bg-danger  p-5">
+											<div class="card p-5" style="background-color: #F7418F;">
 												<div class="item">
 													<h3>PD Terindikasi</h3>
 													<span>47</span>
@@ -597,6 +588,22 @@
 										<!--end::Header-->
 											<div class="col-xl-12">
 												<div id="kt_charts_widget_6_chart" style="height: 250px"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<!--end::List Widget 6-->
+							</div>
+
+							<div class="row g-5 mb-4">
+								<!--begin::List Widget 6-->
+								<div class="col-xl-12">
+									<div class="card card-xl-stretch mb-5 mb-xl-8">
+										<div class="row">
+										<!--begin::Header-->
+										<!--end::Header-->
+											<div class="col-xl-12 p-9">
+												<div id="kt_charts_widget_AB_chart" style="height: 300px;"></div>
 											</div>
 										</div>
 									</div>
