--- a/pns_data_satatisti-v2.html
+++ b/pns_data_satatisti-v2.html
@@ -319,7 +319,7 @@
 									<div class="card-body pt-0">
 
 										<!--begin::Item-->
-										<div class="d-flex align-items-center rounded p-5 mb-7"
+										<div class="d-flex align-items-center p-5 mb-3"
 											style="background-color: #133E87;">
 											<!--begin::Icon-->
 											<span class="svg-icon svg-icon-white me-5">
@@ -340,21 +340,21 @@
 											<!--end::Icon-->
 											<!--begin::Title-->
 											<div class="flex-grow-1 me-2">
-												<a href="#" class="fw-bolder text-white fs-6">Total
+												<a href="#" class="fw-bolder text-white fs-3">Total
 													Seluruh</a>
-												<span class="text-white fw-bold d-block">OPD</span>
+												<span class="text-white fs-4 fw-bold d-block">OPD</span>
 											</div>
 											<!--end::Title-->
 											<!--begin::Lable-->
-											<span class="fw-bolder text-white py-1">205</span>
+											<span class="fw-bolder fs-1 text-white py-1">205</span>
 											<!--end::Lable-->
 										</div>
 										<!--end::Item-->
 										<!--begin::Item-->
-										<div class="d-flex align-items-center rounded p-5 mb-7"
+										<div class="d-flex align-items-center p-5 mb-3"
 											style="background-color: #608BC1;">
 											<!--begin::Icon-->
-											<span class="svg-icon svg-icon-white me-5">
+											<span class="svg-icon svg-icon-dark me-5">
 												<!--begin::Svg Icon | path: icons/duotune/abstract/abs027.svg-->
 												<span class="svg-icon svg-icon-1">
 													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -372,21 +372,21 @@
 											<!--end::Icon-->
 											<!--begin::Title-->
 											<div class="flex-grow-1 me-2">
-												<a href="#" class="fw-bolder text-white fs-6">Total
+												<a href="#" class="fw-bolder text-white fs-3">Total
 													Seluruh</a>
-												<span class="text-white fw-bold d-block">Puskesmas</span>
+												<span class="text-white fs-4 fw-bold d-block">Puskesmas</span>
 											</div>
 											<!--end::Title-->
 											<!--begin::Lable-->
-											<span class="fw-bolder text-white py-1">205</span>
+											<span class="fw-bolder text-white fs-1 py-1">205</span>
 											<!--end::Lable-->
 										</div>
 										<!--end::Item-->
 										<!--begin::Item-->
-										<div class="d-flex align-items-center rounded p-5 mb-7"
+										<div class="d-flex align-items-center p-5 mb-3"
 											style="background-color: #9EB8D9;">
 											<!--begin::Icon-->
-											<span class="svg-icon svg-icon-white me-5">
+											<span class="svg-icon svg-icon-dark me-5">
 												<!--begin::Svg Icon | path: icons/duotune/abstract/abs027.svg-->
 												<span class="svg-icon svg-icon-1">
 													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -404,18 +404,18 @@
 											<!--end::Icon-->
 											<!--begin::Title-->
 											<div class="flex-grow-1 me-2">
-												<a href="#" class="fw-bolder text-white fs-6">Total
+												<a href="#" class="fw-bolder text-dark fs-3">Total
 													Seluruh</a>
-												<span class="text-white fw-bold d-block">Kelurahan</span>
+												<span class="text-dark fs-4 fw-bold d-block">Kelurahan</span>
 											</div>
 											<!--end::Title-->
 											<!--begin::Lable-->
-											<span class="fw-bolder text-white py-1">205</span>
+											<span class="fw-bolder text-dark fs-1 py-1">205</span>
 											<!--end::Lable-->
 										</div>
 										<!--end::Item-->
 										<!--begin::Item-->
-										<div class="d-flex align-items-center rounded p-5 mb-7"
+										<div class="d-flex align-items-center p-5 mb-3"
 											style="background-color: #CBDCEB;">
 											<!--begin::Icon-->
 											<span class="svg-icon svg-icon-dark me-5">
@@ -437,19 +437,19 @@
 											<!--begin::Title-->
 											<div class="flex-grow-1 me-2">
 												<a href="#"
-													class="fw-bolder text-gray-800 text-hover-primary fs-6">Total
+													class="fw-bolder text-gray-800 text-hover-primary fs-3">Total
 													Seluruh</a>
-												<span class="text-muted fw-bold d-block">Kecamatan</span>
+												<span class="text-muted fs-4 fw-bold d-block">Kecamatan</span>
 											</div>
 											<!--end::Title-->
 											<!--begin::Lable-->
-											<span class="fw-bolder text-dark py-1">205</span>
+											<span class="fw-bolder fs-1 text-dark py-1">205</span>
 											<!--end::Lable-->
 										</div>
 										<!--end::Item-->
 
 										<!--begin::Item-->
-										<div class="d-flex align-items-center rounded p-5 mb-7"
+										<div class="d-flex align-items-center p-5 mb-3"
 											style="background-color: #EEF5FF;">
 											<!--begin::Icon-->
 											<span class="svg-icon svg-icon-dark me-5">
@@ -471,13 +471,13 @@
 											<!--begin::Title-->
 											<div class="flex-grow-1 me-2">
 												<a href="#"
-													class="fw-bolder text-gray-800 text-hover-primary fs-6">Total
+													class="fw-bolder text-gray-800 text-hover-primary fs-3">Total
 													Seluruh</a>
-												<span class="text-muted fw-bold d-block">Perangkat Daerah</span>
+												<span class="text-muted fs-4 fw-bold d-block">Perangkat Daerah</span>
 											</div>
 											<!--end::Title-->
 											<!--begin::Lable-->
-											<span class="fw-bolder text-dark py-1">500</span>
+											<span class="fw-bolder text-dark fs-1 py-1">500</span>
 											<!--end::Lable-->
 										</div>
 										<!--end::Item-->
@@ -567,7 +567,7 @@
 											</div>
 
 											<div class="fs-6 d-flex justify-content-between p-5 mb-4 text-gray-800"
-												style="background-color: #4C3BCF;">
+												style="background-color: #133E87;">
 												<div class="fw-bold text-white">PNS Laki-Laki</div>
 												<div class="d-flex fw-bolder text-white">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
@@ -586,12 +586,12 @@
 													</span>
 													<!--end::Svg Icon-->2.542</div>
 											</div>
-											<div class="fs-6 d-flex text-white p-5 justify-content-between my-4"
-												style="background-color: #402E7A;">
-												<div class="fw-bold text-white">PNS Perempuan</div>
+											<div class="fs-6 d-flex text-dark p-5 justify-content-between my-4"
+												style="background-color: #CBDCEB;">
+												<div class="fw-bold text-dark">PNS Perempuan</div>
 												<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr006.svg-->
-													<span class="svg-icon svg-icon-3 me-3 svg-icon-danger">
+													<span class="svg-icon svg-icon-3 me-3 svg-icon-dark">
 														<svg width="150" height="150" viewBox="0 0 150 150" fill="none"
 															xmlns="http://www.w3.org/2000/svg">
 															<path opacity="0.4"
@@ -612,7 +612,7 @@
 											</div>
 
 											<div class="fs-6 d-flex justify-content-between p-5 my-4 text-white"
-												style="background-color: #4B70F5;">
+												style="background-color: #133E87;">
 												<div class="fw-bold text-white">PPPK Laki-Laki</div>
 												<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr007.svg-->
@@ -632,12 +632,12 @@
 													<!--end::Svg Icon-->2.542</div>
 											</div>
 
-											<div class="fs-6 d-flex text-white justify-content-between p-5 my-4"
-												style="background-color: #6C48C5;">
-												<div class="fw-bold text-white">PPPK Perempuan</div>
+											<div class="fs-6 d-flex text-dark justify-content-between p-5 my-4"
+												style="background-color: #CBDCEB;">
+												<div class="fw-bold text-dark">PPPK Perempuan</div>
 												<div class="d-flex fw-bolder">
 													<!--begin::Svg Icon | path: icons/duotune/arrows/arr006.svg-->
-													<span class="svg-icon svg-icon-3 me-3 svg-icon-white">
+													<span class="svg-icon svg-icon-3 me-3 svg-icon-dark">
 														<svg width="150" height="150" viewBox="0 0 150 150" fill="none"
 															xmlns="http://www.w3.org/2000/svg">
 															<path opacity="0.4"
